upto server & client component

--- a/src/app/page_not_found.css
+++ b/src/app/page_not_found.css
@@ -1,5 +1,9 @@
 @import 'https://fonts.googleapis.com/css?family=Inconsolata';
 
+.navbar{
+  display: none !important;
+}
+
 html {
   min-height: 100%;
 }
